--- a/css/layout.css
+++ b/css/layout.css
@@ -33,3 +33,18 @@
   float: right;
   width: 40%;
 }
+
+.col-3 {
+  display: inline-block;
+  width: 33%;
+}
+
+.col-4 {
+  display: inline-block;
+  width: 33%;
+}
+
+.col-5 {
+  display: inline-block;
+  width: 33%;
+}
