--- a/css/layout.css
+++ b/css/layout.css
@@ -25,12 +25,12 @@
 /* Posititoning Classes */
 
 .col-1 {
-  float: left;
+  display: inline-block;
   width: 60%;
 }
 
 .col-2 {
-  float: right;
+  display: inline-block;
   width: 40%;
 }
 
