--- a/css/layout.css
+++ b/css/layout.css
@@ -57,16 +57,19 @@
   display: inline-block;
   width: 25%;
   padding: 1%;
+  background: #000;
 }
 
 .col-7 {
   display: inline-block;
   width: 25%;
   padding: 1%;
+  background: yellow;
 }
 
 .col-8 {
   display: inline-block;
   width: 25%;
   padding: 1%;
+  background: aqua;
 }
