--- a/css/layout.css
+++ b/css/layout.css
@@ -54,21 +54,21 @@
 }
 
 .col-6 {
-  display: block;
+  display: inline-block;
   width: 25%;
   padding: 1%;
   background: #000;
 }
 
 .col-7 {
-  display: block;
+  display: inline-block;
   width: 25%;
   padding: 1%;
   background: yellow;
 }
 
 .col-8 {
-  display: block;
+  display: inline-block;
   width: 25%;
   padding: 1%;
   background: aqua;
