--- a/css/layout.css
+++ b/css/layout.css
@@ -24,48 +24,12 @@
 
 /* Posititoning Classes */
 
-.col-1 {
+#col-1 { /**takes up 2/3 -- includes summer grass, lady bug and skaters/contact correspondence and links */
   display: inline-block;
-  width: 63%;
+  width: 66%;
 }
 
-.col-2 {
+#col-2 { /*-- takes up 1/3 -- includes shoe archive and bluestar heels/follow */
   display: inline-block;
   width: 33%;
-}
-
-.col-3 {
-  display: inline-block;
-  width: 31%;
-  padding: 1%;
-}
-
-.col-4 {
-  display: inline-block;
-  width: 31%;
-  padding: 1%;
-}
-
-.col-5 {
-  display: inline-block;
-  width: 31%;
-  padding: 1%;
-}
-
-.col-6 {
-  display: inline-block;
-  width: 25%;
-  background: #000;
-}
-
-.col-7 {
-  display: inline-block;
-  width: 25%;
-  background: yellow;
-}
-
-.col-8 {
-  display: inline-block;
-  width: 25%;
-  background: aqua;
 }
